# move_the_bot

./: .gitignore  IMPLEMENTATION_PLAN_GEMINI.md  PLAN_ARCHITECTURE.md  PLAN_DESIGN_CHOICES.md  PLAN_PROMPTS.md  PLAN_TEST_STRATEGY.md  README.md  docker-compose.test.yml
agents/: protocol.md
agents/agent_core/: Dockerfile  agentic_core_node.py  constants.py  tools.py
docker/: Dockerfile.ros2  Dockerfile.ros2.arm64  Dockerfile.stt  Dockerfile.web  docker-compose.yml  nginx.conf  ros_entrypoint.sh  rviz2.sh  rviz2_vnc.sh  stt_server.py
docs/: kinematics-analysis.md  moveit-planning.md  rviz2-visualization.md
launch/: deploy.launch.py  move_group.launch.py  moveit.rviz  moveit_rviz.launch.py  visualize.launch.py  visualize.rviz
models/: lookup.py  sketchfab_client.py
models/builtin/: apple.glb  bottle.glb  cube.glb  cylinder.glb  index.json  mug.glb  sphere.glb  table.glb
moveit_config/: joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  simple_arm.urdf
ros_nodes/: joint_state_to_markers.py  kinematics.py  mock_kinematics_node.py  mock_motion_planning_node.py  object_spawn_node.py  virtual_scene_node.py
scripts/: generate_placeholder_glbs.py
scripts/launch/: _arch_detect.sh  all.sh  ollama-agent.sh  openclaw-agent.sh  rviz2-linux.sh  rviz2-macos.sh  rviz2-windows.sh  stop.sh
src/mock_hmi_core/: package.xml  setup.cfg  setup.py
tests/: conftest.py  helpers.py
tests/e2e/: test_full_pipeline.py
tutorials/: tutorial-1-ollama-agent.md  tutorial-2-openclaw-agent.md  tutorial-3-both-agents.md
urdf/: simple_arm.srdf
web/: index.html
(+36 files in other folders)
